Fix: cors 설정을 위한 코드 수정
- CorsMVCConfig.java
- 배포 테스트를 위한 코드 수정

- SecurityConfig.java
- 배포 테스트를 위한 코드 수정