@@ -66,39 +66,29 @@ public class SecurityConfig {
     }
 
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("https://3ever.vercel.app", "http://localhost:3000"));
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//        configuration.setAllowedOrigins(List.of("https://3ever.vercel.app", "http://localhost:3000"));
+//
+//        // 허용할 HTTP 메서드 설정
 //        configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
-//        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Authorization_Refresh", "Refresh-Token", "Cache-Control", "Content-Type"));
-//        configuration.addAllowedHeader("Content-Type");
-//        configuration.addAllowedHeader("X-AUTH-TOKEN");
-//        configuration.addAllowedHeader("Authorization");
-//        configuration.addAllowedHeader("Authorization_Refresh");
-//        configuration.addAllowedHeader("Access-Control-Allow-Origin");
-//        configuration.addAllowedHeader("Access-Control-Allow-Credentials");
-//        configuration.setExposedHeaders(Arrays.asList("Content-Type", "X-AUTH-TOKEN", "Authorization", "Authorization_Refresh"));
+//
+//        // 허용할 요청 헤더 설정
+//        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Authorization_Refresh", "Refresh-Token", "Cache-Control", "Content-Type", "X-AUTH-TOKEN", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
+//
+//        // 클라이언트가 접근할 수 있도록 허용할 응답 헤더 설정
+//        configuration.setExposedHeaders(Arrays.asList("Content-Type", "X-AUTH-TOKEN", "Authorization", "Authorization_Refresh", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
+//
+//        // 자격 증명을 포함한 요청 허용
 //        configuration.setAllowCredentials(true);
-
-        // 허용할 HTTP 메서드 설정
-        configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // 허용할 요청 헤더 설정
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Authorization_Refresh", "Refresh-Token", "Cache-Control", "Content-Type", "X-AUTH-TOKEN", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
-
-        // 클라이언트가 접근할 수 있도록 허용할 응답 헤더 설정
-        configuration.setExposedHeaders(Arrays.asList("Content-Type", "X-AUTH-TOKEN", "Authorization", "Authorization_Refresh", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
-
-        // 자격 증명을 포함한 요청 허용
-        configuration.setAllowCredentials(true);
-
-        // 특정 도메인에서의 요청 허용
-//        configuration.setAllowedOrigins(List.of("https://3ever.vercel.app"));
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+//
+//        // 특정 도메인에서의 요청 허용
+////        configuration.setAllowedOrigins(List.of("https://3ever.vercel.app"));
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
@@ -108,7 +98,7 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .formLogin(AbstractHttpConfigurer::disable)
                 .httpBasic(AbstractHttpConfigurer::disable)
-                .cors((corsCustomizer -> corsCustomizer.configurationSource(corsConfigurationSource())))
+//                .cors((corsCustomizer -> corsCustomizer.configurationSource(corsConfigurationSource())))
                 // 보안 컨텍스트의 저장 방식을 제어하는 설정
                 // 보안 컨텍스트가 명시적으로 저장될 때만 저장되도록 한다.
                 // 보안 컨텍스트가 실수로 변경되거나 저장되는 것을 방지하여 보안성을 높인다.
